@@ -1,4 +1,4 @@
 [NAME]
-msgsed \- stream editing of message catalog
+msgexec \- edit translations of message catalog
 [DESCRIPTION]
 .\" Add any additional description here
