@@ -1,3 +1,13 @@
+2001-07-12  Bruno Haible  <haible@clisp.cons.org>
+
+	* msgexec.x: New file.
+	* msgsed.x: Remove file.
+	* Makefile.am (man_aux): Replace msgsed.x with msgexec.x.
+	(man_MAN1): Replace msgsed.1 with msgexec.1.
+	(man_HTML): Replace msgsed.1.html with msgexec.1.html.
+	(msgexec.1.html): New rule.
+	(msgsed.1.html): Remove rule.
+
 2001-06-10  Bruno Haible  <haible@clisp.cons.org>
 
 	* help2man: New file, from help2man-1.24.
